--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,6 +25,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      env:
+        EXCHANGERATESAPI_KEY: ${{ secrets.EXCHANGERATESAPI_KEY }}
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
